// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importSpeedscopeProfiles 0.0.1 evented profile 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 0,
      "line": undefined,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 1,
      "line": undefined,
      "name": "b",
      "selfWeight": 5,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 2,
      "line": undefined,
      "name": "c",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 3,
      "line": undefined,
      "name": "d",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "simple.txt",
  "stacks": Array [
    "a;b;c 2",
    "a;b;d 4",
    "a;b;c 3",
    "a;b 5",
  ],
}
`;

exports[`importSpeedscopeProfiles 0.0.1 evented profile: indexToView 1`] = `0`;

exports[`importSpeedscopeProfiles 0.0.1 evented profile: profileGroup.name 1`] = `"simple.txt"`;

exports[`importSpeedscopeProfiles 0.1.2 sampled profile 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 0,
      "line": undefined,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 1,
      "line": undefined,
      "name": "b",
      "selfWeight": 5,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 2,
      "line": undefined,
      "name": "c",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 3,
      "line": undefined,
      "name": "d",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "simple.speedscope.json",
  "stacks": Array [
    "a;b;c 2.00s",
    "a;b;d 4.00s",
    "a;b;c 3.00s",
    "a;b 5.00s",
  ],
}
`;

exports[`importSpeedscopeProfiles 0.1.2 sampled profile: indexToView 1`] = `0`;

exports[`importSpeedscopeProfiles 0.1.2 sampled profile: profileGroup.name 1`] = `"simple.speedscope.json"`;

exports[`importSpeedscopeProfiles 0.6.0 multiple profiles 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 0,
      "line": undefined,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 1,
      "line": undefined,
      "name": "b",
      "selfWeight": 5,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 2,
      "line": undefined,
      "name": "c",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 3,
      "line": undefined,
      "name": "d",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "one",
  "stacks": Array [
    "a;b;c 2.00s",
    "a;b;d 4.00s",
    "a;b;c 3.00s",
    "a;b 5.00s",
  ],
}
`;

exports[`importSpeedscopeProfiles 0.6.0 multiple profiles 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 0,
      "line": undefined,
      "name": "a",
      "selfWeight": 0,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 1,
      "line": undefined,
      "name": "b",
      "selfWeight": 5,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 2,
      "line": undefined,
      "name": "c",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": 3,
      "line": undefined,
      "name": "d",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "two",
  "stacks": Array [
    "a;b;c 2.00s",
    "a;b;d 4.00s",
    "a;b;c 3.00s",
    "a;b 5.00s",
  ],
}
`;

exports[`importSpeedscopeProfiles 0.6.0 multiple profiles: indexToView 1`] = `1`;

exports[`importSpeedscopeProfiles 0.6.0 multiple profiles: profileGroup.name 1`] = `"Two Samples"`;

exports[`importSpeedscopeProfiles invalid due to incomplete trace 1`] = `"Tried to complete profile construction with a non-empty stack"`;

exports[`importSpeedscopeProfiles invalid due to out of order events 1`] = `"Tried to leave frame \\"B\\" while frame \\"A\\" was at the top at 4"`;
